--- a/app.json
+++ b/app.json
@@ -4,8 +4,7 @@
     "slug": "EhPrimo",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,7 +12,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#F6F6F6"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,7 +21,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.guilhermeflp.ehprimo",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.guilhermeflp.ehprimo",
+      "versionCode": 1
     }
   }
 }
